--- a/nex/Admin/NexAdmin_Loja.dproj
+++ b/nex/Admin/NexAdmin_Loja.dproj
@@ -63,7 +63,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UseMSBuildExternally>true</DCC_UseMSBuildExternally>
-        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;FormMgrR_XE7;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;NexDocEdit;vclx;cxPageControlRS21;dxDockingRS21;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;FormMgrR_XE7;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;NexDocEdit;vclx;cxPageControlRS21;dxDockingRS21;dxCoreRS23;cxLibraryRS23;dxGDIPlusRS23;dxThemeRS23;cxPageControlRS23;dxDockingRS23;cxDataRS23;dxOfficeCoreRS23;cxEditorsRS23;dxLayoutControlRS23;dxFlowChartRS23;vclimg;cxExportRS23;dxmdsRS23;cxPivotGridRS23;cxGridRS23;cxPivotGridChartRS23;cxSchedulerRS23;cxSchedulerGridRS23;dxSpellCheckerRS23;dxTileControlRS23;dxtrmdRS23;$(DCC_UsePackage)</DCC_UsePackage>
         <Icon_MainIcon>NexAdmin_Loja_Icon4.ico</Icon_MainIcon>
         <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -74,7 +74,7 @@
 $(PostBuildEvent)]]></PostBuildEvent>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
-        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;vclx;cxPageControlRS21;dxDockingRS21;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;vclx;cxPageControlRS21;dxDockingRS21;dxCoreRS23;cxLibraryRS23;dxGDIPlusRS23;dxThemeRS23;cxPageControlRS23;dxDockingRS23;cxDataRS23;dxOfficeCoreRS23;cxEditorsRS23;dxLayoutControlRS23;dxFlowChartRS23;vclimg;cxExportRS23;dxmdsRS23;cxPivotGridRS23;cxGridRS23;cxPivotGridChartRS23;cxSchedulerRS23;cxSchedulerGridRS23;dxSpellCheckerRS23;dxTileControlRS23;dxtrmdRS23;$(DCC_UsePackage)</DCC_UsePackage>
         <Icon_MainIcon>NexAdmin_Loja_Icon4.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
@@ -151,13 +151,6 @@ $(PostBuildEvent)]]></PostBuildEvent>
                 <Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k230.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp230.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxDockingRS23.bpl">ExpressDocking Library by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxSpellCheckerRS23.bpl">ExpressSpellChecker 2 by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxTileControlRS23.bpl">ExpressTileControl by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxtrmdRS23.bpl">ExpressTreePrintedDataSet by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxFlowChartRS23.bpl">ExpressFlowChart by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dclcxSchedulerGridRS23.bpl">ExpressScheduler connection to ExpressQuantumGrid by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dclcxPivotGridChartRS23.bpl">ExpressPivotGrid connection to ExpressQuantumGrid Chart View by Developer Express Inc.</Excluded_Packages>
                 </Excluded_Packages>
                 <Language>
                     <Language Name="ProjectLang">$00000416</Language>
@@ -406,15 +399,15 @@ $(PostBuildEvent)]]></PostBuildEvent>
                 <Platform value="Win64">False</Platform>
             </Platforms>
             <Deployment Version="2">
-                <DeployFile LocalName="C:\Meus Programas\Nex\NexAdmin_Loja.exe" Configuration="Debug" Class="ProjectOutput">
-                    <Platform Name="Win32">
-                        <RemoteName>NexAdmin_Loja.exe</RemoteName>
-                        <Overwrite>true</Overwrite>
-                    </Platform>
-                </DeployFile>
                 <DeployFile LocalName="C:\Comp\LMD2015\source\lmddlgcmps.inc" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
+                        <Overwrite>true</Overwrite>
+                    </Platform>
+                </DeployFile>
+                <DeployFile LocalName="C:\Meus Programas\Nex\NexAdmin_Loja.exe" Configuration="Debug" Class="ProjectOutput">
+                    <Platform Name="Win32">
+                        <RemoteName>NexAdmin_Loja.exe</RemoteName>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
