--- a/nex/Admin/NexAdmin_Loja.dproj
+++ b/nex/Admin/NexAdmin_Loja.dproj
@@ -63,7 +63,7 @@
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win32)'!=''">
         <DCC_UseMSBuildExternally>true</DCC_UseMSBuildExternally>
-        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;FormMgrR_XE7;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;NexDocEdit;vclx;cxPageControlRS21;dxDockingRS21;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;FormMgrR_XE7;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;NexDocEdit;vclx;cxPageControlRS21;dxDockingRS21;dxCoreRS23;cxLibraryRS23;dxGDIPlusRS23;dxThemeRS23;cxPageControlRS23;dxDockingRS23;cxDataRS23;dxOfficeCoreRS23;cxEditorsRS23;dxLayoutControlRS23;dxFlowChartRS23;vclimg;cxExportRS23;dxmdsRS23;cxPivotGridRS23;cxGridRS23;cxPivotGridChartRS23;dxSpellCheckerRS23;dxTileControlRS23;dxtrmdRS23;$(DCC_UsePackage)</DCC_UsePackage>
         <Icon_MainIcon>NexAdmin_Loja_Icon4.ico</Icon_MainIcon>
         <DCC_Namespace>System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
         <VerInfo_Locale>1033</VerInfo_Locale>
@@ -74,7 +74,7 @@
 $(PostBuildEvent)]]></PostBuildEvent>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Base_Win64)'!=''">
-        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;vclx;cxPageControlRS21;dxDockingRS21;$(DCC_UsePackage)</DCC_UsePackage>
+        <DCC_UsePackage>rtl;vcl;dbrtl;vcldb;cxDataRS21;cxEditorsRS21;dxThemeRS21;dxGDIPlusRS21;cxLibraryRS21;dxCoreRS21;vclx;cxPageControlRS21;dxDockingRS21;dxCoreRS23;cxLibraryRS23;dxGDIPlusRS23;dxThemeRS23;cxPageControlRS23;dxDockingRS23;cxDataRS23;dxOfficeCoreRS23;cxEditorsRS23;dxLayoutControlRS23;dxFlowChartRS23;vclimg;cxExportRS23;dxmdsRS23;cxPivotGridRS23;cxGridRS23;cxPivotGridChartRS23;dxSpellCheckerRS23;dxTileControlRS23;dxtrmdRS23;$(DCC_UsePackage)</DCC_UsePackage>
         <Icon_MainIcon>NexAdmin_Loja_Icon4.ico</Icon_MainIcon>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1)'!=''">
@@ -149,15 +149,9 @@ $(PostBuildEvent)]]></PostBuildEvent>
                     <Source Name="MainSource">NexAdmin_Loja.dpr</Source>
                 </Source>
                 <Excluded_Packages>
+                    <Excluded_Packages Name="C:\comp\devex\Library\RS23\dclcxSchedulerGridRS23.bpl">ExpressScheduler connection to ExpressQuantumGrid by Developer Express Inc.</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dcloffice2k230.bpl">Microsoft Office 2000 Sample Automation Server Wrapper Components</Excluded_Packages>
                     <Excluded_Packages Name="$(BDSBIN)\dclofficexp230.bpl">Microsoft Office XP Sample Automation Server Wrapper Components</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxDockingRS23.bpl">ExpressDocking Library by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxSpellCheckerRS23.bpl">ExpressSpellChecker 2 by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxTileControlRS23.bpl">ExpressTileControl by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxtrmdRS23.bpl">ExpressTreePrintedDataSet by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dcldxFlowChartRS23.bpl">ExpressFlowChart by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dclcxSchedulerGridRS23.bpl">ExpressScheduler connection to ExpressQuantumGrid by Developer Express Inc.</Excluded_Packages>
-                    <Excluded_Packages Name="C:\Comp\DevEx\Library\RS23\dclcxPivotGridChartRS23.bpl">ExpressPivotGrid connection to ExpressQuantumGrid Chart View by Developer Express Inc.</Excluded_Packages>
                 </Excluded_Packages>
                 <Language>
                     <Language Name="ProjectLang">$00000416</Language>
@@ -406,7 +400,7 @@ $(PostBuildEvent)]]></PostBuildEvent>
                 <Platform value="Win64">False</Platform>
             </Platforms>
             <Deployment Version="2">
-                <DeployFile LocalName="C:\Comp\LMD2015\source\LMDCmps.inc" Configuration="Debug" Class="ProjectFile">
+                <DeployFile LocalName="C:\Comp\LMD2015\source\lmddlgcmps.inc" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
@@ -418,13 +412,22 @@ $(PostBuildEvent)]]></PostBuildEvent>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployFile LocalName="C:\Comp\LMD2015\source\lmddlgcmps.inc" Configuration="Debug" Class="ProjectFile">
+                <DeployFile LocalName="C:\Comp\LMD2015\source\LMDCmps.inc" Configuration="Debug" Class="ProjectFile">
                     <Platform Name="Win32">
                         <RemoteDir>.\</RemoteDir>
                         <Overwrite>true</Overwrite>
                     </Platform>
                 </DeployFile>
-                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
+                <DeployClass Name="DependencyModule">
+                    <Platform Name="Win32">
+                        <Operation>0</Operation>
+                        <Extensions>.dll;.bpl</Extensions>
+                    </Platform>
+                    <Platform Name="OSX32">
+                        <Operation>1</Operation>
+                        <Extensions>.dylib</Extensions>
+                    </Platform>
+                </DeployClass>
                 <DeployClass Name="ProjectOSXResource">
                     <Platform Name="OSX32">
                         <RemoteDir>Contents\Resources</RemoteDir>
@@ -738,16 +741,7 @@ $(PostBuildEvent)]]></PostBuildEvent>
                         <Operation>1</Operation>
                     </Platform>
                 </DeployClass>
-                <DeployClass Name="DependencyModule">
-                    <Platform Name="Win32">
-                        <Operation>0</Operation>
-                        <Extensions>.dll;.bpl</Extensions>
-                    </Platform>
-                    <Platform Name="OSX32">
-                        <Operation>1</Operation>
-                        <Extensions>.dylib</Extensions>
-                    </Platform>
-                </DeployClass>
+                <DeployClass Name="ProjectiOSDeviceResourceRules"/>
                 <ProjectRoot Platform="iOSDevice64" Name="$(PROJECTNAME).app"/>
                 <ProjectRoot Platform="Win64" Name="$(PROJECTNAME)"/>
                 <ProjectRoot Platform="iOSDevice32" Name="$(PROJECTNAME).app"/>
