--- a/.gitignore
+++ b/.gitignore
@@ -222,3 +222,9 @@ pip-log.txt
 nex/serv/NexServ_D10.identcache
 *.stat
 *.identcache
+*.stat
+nex/serv/NexServ_D10.identcache
+*.identcache
+nex/Admin/NexAdmin_Loja.dproj.local
+*.identcache
+nex/serv/NexServ_D10.identcache
